--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <div class="education">
                 </div>
             </div>
-            <!-- <div class="education">
+            <div class="education">
                 <div class="container">
                     <div class="card card1">
                         <div class="content">
@@ -113,7 +113,7 @@
                         </div>
                     </div>
                 </div>
-            </div>     -->
+            </div>
         </div>
     </section>
     <!-------------------------Skills----------------------------->
